# rust-ledger

./: Cargo.toml  repomix-output.txt
lib/: Cargo.toml
lib/src/: error.rs  info.rs  lib.rs
lib/src/provider/: context.rs
lib/src/transport/: ble.rs  ble_ios.rs  mod.rs  usb.rs
lib/src/transport/ios/: ble.rs  mod.rs  usb.rs
proto/src/: lib.rs
sim/src/: handle.rs  lib.rs
